--- a/index.html
+++ b/index.html
@@ -2967,7 +2967,7 @@
             labor: {
                 icon: "🌾",
                 title: "建设模范",
-                description: "在陕公学习期间，你积极响应'自己动手、丰衣足食'号召，1939年4月你随全校师生到何家山开荒。你吃苦耐劳，超额完成开荒任务，为'陕公新村'的建设贡献力量。毕业后，你留在边区或根据地，继续参与大生产运动，为克服经济困难、实现自给自足而奋斗，成为生产战线上的一名模范。"
+                description: "在陕公学习期间，你积极响应\"自己动手、丰衣足食\"号召，1939年4月你随全校师生到何家山开荒。你吃苦耐劳，超额完成开荒任务，为\"陕公新村\"的建设贡献力量。毕业后，你留在边区或根据地，继续参与大生产运动，为克服经济困难、实现自给自足而奋斗，成为生产战线上的一名模范。"
             },
             mass: {
                 icon: "👥",
@@ -2977,7 +2977,7 @@
             cultural: {
                 icon: "🎭",
                 title: "文艺战士",
-                description: "在陕公学习期间，你加入了'陕北公学流动剧团'。1939年3月，你随剧团深入边区周边，进行抗日宣传演出，动员群众。毕业后，你继续从事文艺宣传工作，用戏剧、歌曲、标语等形式宣传党的政策，鼓舞抗日斗志，成为一名活跃在文化战线上的抗战战士。"
+                description: "在陕公学习期间，你加入了\"陕北公学流动剧团\"。1939年3月，你随剧团深入边区周边，进行抗日宣传演出，动员群众。毕业后，你继续从事文艺宣传工作，用戏剧、歌曲、标语等形式宣传党的政策，鼓舞抗日斗志，成为一名活跃在文化战线上的抗战战士。"
             },
             international: {
                 icon: "🌍",
@@ -3660,7 +3660,6 @@
                         <div class="summary-course-name">${item.name}</div>
                         <div class="summary-course-desc">${item.description}</div>
                     </div>
-                    <div class="summary-course-points ${item.isPositive ? '' : 'activity-effect-summary'}">${item.effect}</div>
                 `;
                 coursesContainer.appendChild(div);
             });
